--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python: "3.6"
 cache: pip
 before_install:
   - "pip install -U pip"
-  - "export PYTHONPATH=$PYTHONPATH:$(pwd)"
+  - "python setup.py install"
 install:
   - pip install -r requirements.txt
 script:
