--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ python: "3.6"
 cache: pip
 before_install:
   - "pip install -U pip"
-  - "python setup.py install"
 install:
+  - export PYTHONPATH=$PYTHONPATH:$(pwd)/src/thermo
   - pip install -r requirements.txt
+  - pip install .
 script:
   - python tests/test_read_ibt.py
   - python tests/test_sweep.py
